[package]
name = "warp-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"

members = [
    "prisma-cli",
]

[dependencies]
warp = "0.3.3"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.1" }
tokio = {version = "1", features = ["full"]}
serde = "1.0.145"
serde_json = "1.0.85"
once_cell = "1.15.0"
bcrypt = "0.13.0"
chrono = "0.4.22"
reqwest = {version = "0.11.12", features = ["blocking", "json"]}